--- a/patientregistration.html
+++ b/patientregistration.html
@@ -43,26 +43,30 @@
           </ul>
         </div>
       </nav>
-
-      <h1>Register an account for E-Health</h1>
-      <p>Please fill in all the required information, in order to make an account.</p>
-      <form class="" action="patientregistration.html" method="post">
-        <label>First Name</label> <br>
-        <input type="text" name="" value=""></input> <br>
-        <label>Last Name</label> <br>
-        <input type="text" name="" value=""></input> <br>
-        <label>Medicare Card Number</label> <br>
-        <input type="text" name="" value=""></input> <br>
-        <label>Mobile Number</label> <br>
-        <input type="text" name="" value=""></input> <br>
-        <label>Email Address</label> <br>
-        <input type="text" name="" value=""></input> <br>
-        <label>Password </label> <br>
-        <input type="password" name="" value=""> <br>
-        <input type="submit"> <br>
-        <a href="patientlogin.html">Already have an account? Login here</a>
-      </form>
-    </section>
+      
+<!-- registration-form -->
+      <div class="registration-content">
+        <div class="img">
+          <img src="css/patientregistration.svg">
+        </div>
+        <div class="registration-form">
+          <h1> Patient Registration</h1>
+          <form action="includes/registration.inc.php>" method="post">
+            <input type="text" placeholder="First Name" name="" value=""> <br>
+            <input type="text" placeholder="Last Name" name="" value=""> <br>
+            <input type="text" placeholder="Medicare Card Number" name="" value=""> <br>
+            <input type="text" placeholder="Mobile Number" name="" value=""> <br>
+            <input type="email" placeholder="Email" name="" value=""> <br>
+            <input type="password" placeholder="Password" name="" value=""> <br>
+            <div class="submit-btn">
+              <button class="btn btn-outline-light">Sign Up</button>
+            </div>
+            <div class="a">
+              <a href="patientlogin.html" style="color:white;">Have an account already? Login here</a>
+            </div>
+          </form>
+        </div>
+      </div>
   </body>
 
   </html>
