--- a/patientlogin.html
+++ b/patientlogin.html
@@ -48,8 +48,8 @@
   <div class="login-form">
   <h1>Patient Login</h1>
   <form action="includes/login.inc.php" method="post">
-    <input type="email" placeholder="Email" name="emailid"> <br>
-    <input type="password" placeholder="Password" name="passwordid" value=""> <br>
+    <input type="email" placeholder="Email" name="emailid" required> <br>
+    <input type="password" placeholder="Password" name="passwordid" value="" required> <br>
     <div class="submit-btn">
       <button type="submit" name="login-submit" class="btn btn-outline-light">Sign In</button>
     </div>
