--- a/patientregistration.html
+++ b/patientregistration.html
@@ -51,13 +51,13 @@
         </div>
         <div class="registration-form">
           <h1> Patient Registration</h1>
-          <form action="includes/registration.inc.php>" method="post">
-            <input type="text" placeholder="First Name" name="" value=""> <br>
-            <input type="text" placeholder="Last Name" name="" value=""> <br>
-            <input type="text" placeholder="Medicare Card Number" name="" value=""> <br>
-            <input type="text" placeholder="Mobile Number" name="" value=""> <br>
-            <input type="email" placeholder="Email" name="" value=""> <br>
-            <input type="password" placeholder="Password" name="" value=""> <br>
+          <form action="includes/registration.inc.php>" method="post" required>
+            <input type="text" placeholder="First Name" name="" value="" required> <br>
+            <input type="text" placeholder="Last Name" name="" value="" required> <br>
+            <input type="text" placeholder="Medicare Card Number" name="" value="" required> <br>
+            <input type="text" placeholder="Mobile Number" name="" value="" required> <br>
+            <input type="email" placeholder="Email" name="" value="" required> <br>
+            <input type="password" placeholder="Password" name="" value="" required> <br>
             <div class="submit-btn">
               <button class="btn btn-outline-light">Sign Up</button>
             </div>
