--- a/patientlogin.html
+++ b/patientlogin.html
@@ -31,7 +31,7 @@
           <a class="nav-link" href="Home.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">About</a>
+          <a class="nav-link" href="doctors-info.ejs">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="patientlogin.html">Login</a>
